# xfce4-diskperf-plugin

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  configure  configure.ac  configure.ac.in  configure.in.in  meson.build
panel-plugin/: Makefile.am  Makefile.in  config_gui.c  config_gui.h  debug.c  debug.h  devperf.c  devperf.h  diskperf.desktop.in  diskperf.desktop.in.in  main.c  meson.build
po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  ms.po  nb.po  nl.po  oc.po  pa.po  (+20 more)
xfce4-diskperf-plugin-beta/: configure  configure.ac  rebuild
xfce4-diskperf-plugin-beta-2/: AUTHORS  Makefile.in  README  rebuild
xfce4-diskperf-plugin-beta-2/panel-plugin/: config_gui.c  config_gui.h  debug.c  debug.h  devperf.c  devperf.h  main.c
xfce4-diskperf-plugin-beta/glade/: config_gui.glade  config_gui.gladep
xfce4-diskperf-plugin-beta/panel-plugin/: config_gui.c  config_gui.h  debug.c  debug.h  devperf.c  devperf.h  main.c
xfce4-diskperf-plugin/panel-plugin/: config_gui.c  config_gui.h  debug.c  debug.h  devperf.c  devperf.h  main.c
